# welltrajconvert

./: .gitignore  .readthedocs.yml  LICENSE  README.md  readthedocs.yml  requirements.txt  setup.cfg  setup.py
data/: Well_A_Dir_Survey.csv  example.json  well_C.csv  well_header.csv  well_interpolate_data.csv  well_surface_location.csv  well_test_survey.csv  wellbore_survey.csv  wellbore_survey_2.csv  wellbore_survey_3.csv  wellbore_survey_IHS.csv  wellbore_survey_many.csv  wellbore_survey_v1.json  wellbore_survey_v2.json  wellbore_survey_v3.json
notebook/: Calculate Wellbore Trajectory-Copy1.ipynb  Calculate Wellbore Trajectory.ipynb  Calculate Wellbore Trajectory_V1-Copy1.ipynb  Calculate Wellbore Trajectory_V1.ipynb  Calculate Wellbore Trajectory_testing_v1.ipynb  Convert_SurfaceLatLon_to_SurveyLatLon.ipynb  DF_TO_JSON_no_nest_V1.ipynb  Data Object V2.ipynb  DataBatch_FileGetter2.ipynb  DataBatch_sandbox.ipynb  From dev files and wellheader.ipynb  Get Files and Transform.ipynb  Get_From_Different_Data_Sources.ipynb  Interpolate.ipynb  Lat Long Conversion .ipynb  Lat Long Conversion V1-Copy1.ipynb  Lat Long Conversion V1.ipynb  OOP_testing.ipynb  Untitled.ipynb  Working with CSV-Well Header and Dev.ipynb  Working with CSV.ipynb  data.json  new wellbore trajectory class.ipynb
src/: DataBatch.py  base.py  calculable_object.py  core.py  data_batch.py  data_load.py  data_object.py  data_source.py  dataclass.py  deviation_survey.py  directional_survey.py  foundation.py  imports.py  test.py  transforms.py  utils.py  wellbore_trajectory.py
tests/: test.py  test_array_monotonic.py  test_data_batch.py  test_lat_lon_calc.py  test_lat_lon_json_comparison.py  test_lat_lon_json_vs_benchmark.py  test_read.py  test_read_df.py  test_read_dict.py  test_surface_lat_long_vs_x_y.py  test_validate.py  test_validate_array_len.py  test_validate_array_sign.py  test_validate_lat_long_range.py  test_validate_wellId_type.py  test_wellbore_trajectory_calc_lat_lon_points.py  (+3 more)
welltrajconvert/: __init__.py  (+6 more)
(+24 files in other folders)
