[metadata]
name = welltrajconvert
version = 0.0.3
author = Brandon Amos
author_email = bpamosconsulting@gmail.com
description = Well Trajectory Conversion
long_description = file: README.md
url = https://github.com/bpamos/directional-survey-converter
keywords = directional, directional survey, wellbore, trajectory, minimum curvature
classifiers =
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
license = Apache License 2.0

[options]
python_requires = >=3.7
package_dir =
    =welltrajconvert
packages = find:
install_requires =
    numpy>=1.19
    scipy>=1.1
    utm>=0.6.0
    pyproj>=2.6.1
    pandas>=1.1
    dataclasses>=0.7
    matplotlib>=3.3.2

[options.extras_require]
doc =
    sphinx>=2.4,<3
    jupyter>=1
    sphinx_rtd_theme<0.5
    nbsphinx>=0.4
    jupyter>=1
