[metadata]
name = welltrajconvert_bpamos
version = 0.0.3
author = Brandon Amos
author_email = bpamosconsulting@gmail.com
description = Well Trajectory Conversion
#long_description = file: README.md
url = https://github.com/bpamos/welltrajconvert
keywords = directional, directional survey, wellbore, trajectory, minimum curvature
classifiers =
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
license = MIT License

[options]
python_requires = >=3.7
#package_dir =
#    =welltrajconvert
packages = welltrajconvert
install_requires =
    numpy>=1.9
    scipy>=1.4.1
    utm>=0.5.0
    pyproj>=2.6.1
    pandas>=1.0.4
    dataclasses>=0.6
    matplotlib>=3.2.1

[options.packages.find]
where = welltrajconvert
exclude =
    tests
    docs


[options.extras_require]
doc =
    sphinx>=2.4,<3
    jupyter>=1
    nbsphinx>=0.4
    jupyter>=1
